- fixed z-index problems when sorting snippets

--- a/trunk/styles/snippely.css
+++ b/trunk/styles/snippely.css
@@ -63,6 +63,7 @@ body {
 	width: 100%;
 	height: 100px;
 	position: absolute;
+	z-index: 1500;
 }
 
 #content-bottom {
@@ -216,6 +217,7 @@ body {
 /* @group Snippet */
 
 #snippet-toolbar {
+	position: absolute;
 	top: 0px;
 	left: 0px;
 	right: 0px;
@@ -224,6 +226,7 @@ body {
 	border-top: 1px solid #e8eaed;
 	border-bottom: 1px solid #aaa;
 	background: url(../images/grad.png) repeat-x left;
+	z-index: 1500;
 }
 
 #snippet {
